--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expo": "^33.0.0",
     "firebase-admin": "^8.2.0",
     "firebase-functions": "^3.0.1",
+    "gambler": "^0.1.0",
     "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
@@ -29,7 +30,8 @@
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
     "rn-slider-switch": "0.0.3",
-    "rn-sliding-up-panel": "^2.3.0"
+    "rn-sliding-up-panel": "^2.3.0",
+    "shuffle": "^0.2.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1",
