--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-popup-dialog": "^0.18.2",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-swipe-list-view": "^1.5.6",
+    "react-native-swipe-up-down": "^1.0.7",
     "react-native-swipeable": "^0.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
