--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-numeric-input": "^1.8.0",
     "react-native-popup-dialog": "^0.18.2",
+    "react-native-side-menu": "^1.1.3",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-swipe-list-view": "^1.5.6",
     "react-native-swipe-up-down": "^1.0.7",
