--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-swipe-list-view": "^1.5.6",
     "react-native-swipe-up-down": "^1.0.7",
     "react-native-swipeable": "^0.6.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
