--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase-functions": "^3.0.1",
     "gambler": "^0.1.0",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
@@ -20,10 +21,12 @@
     "react-native-draggable": "^1.0.15",
     "react-native-elements": "^1.1.0",
     "react-native-gifted-form": "^0.1.1",
+    "react-native-global-props": "^1.1.5",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-numeric-input": "^1.8.0",
     "react-native-popup-dialog": "^0.18.2",
     "react-native-side-menu": "^1.1.3",
+    "react-native-side-menu-over": "0.0.2",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-swipe-list-view": "^1.5.6",
     "react-native-swipe-up-down": "^1.0.7",
