--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-numeric-input": "^1.8.0",
     "react-native-popup-dialog": "^0.18.2",
+    "react-native-pullable-view": "^1.0.2",
     "react-native-side-menu": "^1.1.3",
     "react-native-side-menu-over": "0.0.2",
     "react-native-snap-carousel": "^3.8.0",
