draggable pretty much done

--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "dependencies": {
     "expo": "^33.0.0",
     "expo-file-system": "^5.0.1",
+    "expo-haptics": "^5.0.1",
     "firebase-admin": "^8.2.0",
     "firebase-functions": "^3.0.1",
     "gambler": "^0.1.0",
     "moment": "^2.24.0",
+    "native-base": "^2.13.4",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-coverflow": "^0.1.7",
     "react-native-draggable": "^1.0.15",
     "react-native-draggable-flatlist": "^1.1.7",
@@ -25,6 +28,7 @@
     "react-native-gifted-form": "^0.1.1",
     "react-native-global-props": "^1.1.5",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-motion": "^1.0.4",
     "react-native-numeric-input": "^1.8.0",
     "react-native-popup-dialog": "^0.18.2",
     "react-native-pullable-view": "^1.0.2",
