--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.oceanus.notyugioh",
       "supportsTablet": true,
       "infoPlist": {
         "UIBackgroundModes": [
