--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,13 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "child-process-promise": "^2.2.1",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.0.0"
+    "firebase-functions": "^3.0.0",
+    "fs": "0.0.1-security",
+    "mkdirp-promise": "^5.0.1",
+    "os": "^0.1.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
