--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-native-elements": "^1.1.0",
     "react-native-gifted-form": "^0.1.1",
     "react-native-global-props": "^1.1.5",
+    "react-native-image-progress": "^1.1.1",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-motion": "^1.0.4",
     "react-native-numeric-input": "^1.8.0",
     "react-native-popup-dialog": "^0.18.2",
+    "react-native-progress": "^3.6.0",
     "react-native-pullable-view": "^1.0.2",
     "react-native-side-menu": "^1.1.3",
     "react-native-side-menu-over": "0.0.2",
@@ -46,7 +48,8 @@
     "rn-slider-switch": "0.0.3",
     "rn-sliding-up-panel": "^2.3.0",
     "shuffle": "^0.2.2",
-    "toggle-switch-react-native": "^2.0.2"
+    "toggle-switch-react-native": "^2.0.2",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1",
