--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,10 @@
     "fs": "0.0.1-security",
     "mkdirp-promise": "^5.0.1",
     "os": "^0.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^3.3.3",
+    "xhr2": "^0.2.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
