--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "native-base": "^2.13.4",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
+    "react-circle-slider": "^1.6.2",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-circle-slider": "^1.1.1",
     "react-native-coverflow": "^0.1.7",
     "react-native-draggable": "^1.0.15",
     "react-native-draggable-flatlist": "^1.1.7",
@@ -30,6 +32,7 @@
     "react-native-image-progress": "^1.1.1",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-motion": "^1.0.4",
+    "react-native-multibar": "0.0.12",
     "react-native-numeric-input": "^1.8.0",
     "react-native-popup-dialog": "^0.18.2",
     "react-native-progress": "^3.6.0",
@@ -37,12 +40,15 @@
     "react-native-side-menu": "^1.1.3",
     "react-native-side-menu-over": "0.0.2",
     "react-native-snap-carousel": "^3.8.0",
+    "react-native-svg": "^9.4.0",
     "react-native-swipe-list-view": "^1.5.6",
     "react-native-swipe-up-down": "^1.0.7",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
+    "react-navigation-tabs": "^2.4.0",
+    "react-navigation-transitions": "^1.0.12",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
     "rn-slider-switch": "0.0.3",
