--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-animatable": "^1.3.2",
     "react-native-circle-slider": "^1.1.1",
     "react-native-circular-slider": "^1.0.1",
     "react-native-coverflow": "^0.1.7",
