--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-swipe-list-view": "^1.5.6",
     "react-native-swipe-up-down": "^1.0.7",
     "react-native-swipeable": "^0.6.0",
+    "react-native-touchable-scale": "^2.0.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
