user is provided with a loading animation while waiting for opponent

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^1.3.2",
+    "react-native-card-flip": "^1.0.4",
     "react-native-circle-slider": "^1.1.1",
     "react-native-circular-slider": "^1.0.1",
     "react-native-coverflow": "^0.1.7",
@@ -41,6 +42,7 @@
     "react-native-pullable-view": "^1.0.2",
     "react-native-side-menu": "^1.1.3",
     "react-native-side-menu-over": "0.0.2",
+    "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-svg": "^9.4.0",
     "react-native-swipe-list-view": "^1.5.6",
