--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expo": "^33.0.0",
     "expo-file-system": "^5.0.1",
     "expo-haptics": "^5.0.1",
+    "expo-sensors": "^7.0.0",
     "firebase-admin": "^8.2.0",
     "firebase-functions": "^3.0.1",
     "gambler": "^0.1.0",
